@@ -448,6 +448,8 @@ int scm_ice_9_already_loaded = 0;
    the usual way, and the auto-generated inner_main will do the right
    thing. */
 
+static char guile[] = "guile";
+
 SCM
 scm_compile_shell_switches (int argc, char **argv)
 {
@@ -461,7 +463,7 @@ scm_compile_shell_switches (int argc, char **argv)
   int interactive = 1;		/* Should we go interactive when done? */
   int use_emacs_interface = 0;
   int i;
-  char *argv0 = 0;
+  char *argv0 = guile;
 
   if (argc > 0)
     {
@@ -473,7 +475,7 @@ scm_compile_shell_switches (int argc, char **argv)
 	scm_usage_name++;
     }
   if (! scm_usage_name)
-    scm_usage_name = "guile";
+    scm_usage_name = guile;
   
   for (i = 1; i < argc; i++)
     {
